<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room_description">Стандартный c видом на бассейн или сад</string>
    <string name="conditioner">Кондиционер</string>
    <string name="pool">Собственный бассейн</string>
    <string name="room_details">Подробнее о номере</string>
    <string name="price">186 600</string>
    <string name="service_for_price">за 7 ночей с перелетом</string>
    <string name="choose_room">Выбрать номер</string>
</resources>